# OpenConstruct

./: AGENT.md  DEPENDENCIES.md  README.md
.github/workflows/: signal-chain-ci.yml  signal-chain-release.yml
architecture/: README.md  openconstruct-developer-guide.md
crates/openshell-constraint-theory/: Cargo.toml
crates/openshell-constraint-theory/src/: lib.rs
crates/openshell-fleet-homology/: Cargo.toml
crates/openshell-fleet-homology/src/: lib.rs
crates/openshell-flux-fracture/: Cargo.toml
crates/openshell-flux-fracture/src/: lib.rs
crates/openshell-flux-vm/: Cargo.toml
crates/openshell-flux-vm/src/: lib.rs
crates/openshell-holonomy-consensus/: Cargo.toml
crates/openshell-holonomy-consensus/src/: lib.rs
crates/openshell-prover/: Cargo.toml
crates/openshell-prover/src/: model.rs
crates/openshell-pythagorean48/: Cargo.toml
crates/openshell-pythagorean48/src/: lib.rs
crates/openshell-router/src/: backend.rs  config.rs  lib.rs  mock.rs
crates/openshell-router/tests/: backend_integration.rs
crates/openshell-sandbox/src/: lib.rs  proxy.rs
crates/openshell-signal-chain/: Cargo.toml  README.md  publish.sh
crates/openshell-signal-chain/benches/: cascade.rs  signal_chain_benches.rs
crates/openshell-signal-chain/examples/: fleet_holonomy.rs  signal_chain_room.rs  spline_curvature.rs
crates/openshell-signal-chain/src/: constraint.rs  dial.rs  flux_vm_bridge.rs  holonomy_bridge.rs  inference.rs  lib.rs  room.rs  signal_chain.rs  snap.rs
crates/openshell-signal-chain/tests/: test_signal_chain.rs
memory/: JOURNAL.md
(+2 files in other folders)
